--- a/neo-app.json
+++ b/neo-app.json
@@ -18,6 +18,15 @@
         "entryPath": "/test-resources"
       },
       "description": "SAPUI5 Test Resources"
+    },
+    {
+      "path": "/sap/opu/odata",
+      "target": {
+        "type": "destination",
+        "name": "IWS_babu",
+        "entryPath": "/sap/opu/odata"
+      },
+      "description": "IWS-new server"
     }
   ],
   "sendWelcomeFileRedirect": true
